ADD_SUBDIRECTORY(i18n)
IF (MINGW)
	INSTALL(DIRECTORY xsd DESTINATION . PATTERN ".git" EXCLUDE PATTERN "i18n" EXCLUDE PATTERN doc EXCLUDE)
ELSE()
	INSTALL(FILES click.wav DefaultSong.h2song emptySample.wav hydrogen.default.conf DESTINATION ${H2_SYS_PATH})
	INSTALL(DIRECTORY demo_songs DESTINATION ${H2_SYS_PATH})
	INSTALL(DIRECTORY drumkits DESTINATION ${H2_SYS_PATH})
	INSTALL(DIRECTORY img DESTINATION ${H2_SYS_PATH})
	INSTALL(DIRECTORY new_tutorial  DESTINATION ${H2_SYS_PATH})
	INSTALL(DIRECTORY xsd DESTINATION ${H2_SYS_PATH})
ENDIF()
