# make clean does not delete *.ts and *.qm files
SET_DIRECTORY_PROPERTIES(PROPERTIES CLEAN_NO_CUSTOM 1)

FILE(GLOB TS_FILES ${CMAKE_CURRENT_LIST_DIR}/*.ts)

if(H2CORE_HAVE_QT6)
	QT6_ADD_TRANSLATION(QM_FILES ${TS_FILES})
else()
	QT5_ADD_TRANSLATION(QM_FILES ${TS_FILES})
endif()
ADD_CUSTOM_TARGET(translations ALL DEPENDS ${QM_FILES})

IF(MINGW)
	INSTALL(FILES ${QM_FILES} DESTINATION "./data/i18n")
ELSE()
	INSTALL(FILES ${QM_FILES} DESTINATION "${H2_SYS_PATH}/data/i18n")
ENDIF()
